outputs.OLD/production-metadata/HEAL-33054/unpackaged/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Medication_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Promotions__c.Promotion_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Promotions__c.Medication_Promotion_Lookup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Opportunities (Medication Promotion)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Name__c</fullName>
        <label>Membership Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GainsWave Membership</fullName>
                </value>
                <value>
                    <fullName>Emsculpt Butt Membership</fullName>
                </value>
                <value>
                    <fullName>Emsculpt Ab Membership</fullName>
                </value>
                <value>
                    <fullName>VIP Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pharmacy Account Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lab Account Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate Doctor Account Record Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Payment_Terms__c</fullName>
        <label>Net Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Net_Payment_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Signup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Signup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Reorder_Date__c</fullName>
        <label>Next Reorder Date</label>
        <summarizedField>OpportunityLineItem.Reorder_Date__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Products__c</fullName>
        <label>Num of Products</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Dose__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Services__c</fullName>
        <label>Num of Services</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Dose__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Appointments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Nurture_Emails_Sent__c</fullName>
        <label>Number of Nurture Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_SF_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old SF Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Old_SF_Opp_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Old SF Opp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_SF_Oppt_Price_Book_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old SF Oppt Price Book ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Closed_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opp Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opp_Current_Year_Formula__c</fullName>
        <formula>IF( Closed_Year__c ==  Current_Year_Date__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Current Year Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Balance_Due__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Opportunity ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Formula__c</fullName>
        <description>A workaround field was created to resolve a conflict issue with the field name in the email template.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partial_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Partial Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partial_Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the opportunity is partial refunded then this checkbox will be checked.</description>
        <label>Opportunity Partial Refunded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Patient_First_Name__c</fullName>
        <formula>Account.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Patient First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Patient_Full_Name__c</fullName>
        <formula>Account.FirstName +&quot; &quot;+ Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Patient Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Refunded_Date_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Refunded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Refunded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Scripts Pending</fullName>
                </value>
                <value>
                    <fullName>File On Hold</fullName>
                </value>
                <value>
                    <fullName>Blood Test Pending</fullName>
                </value>
                <value>
                    <fullName>Lab Requisition Sent</fullName>
                </value>
                <value>
                    <fullName>10X LC Incomplete Labs</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Office Appointment</fullName>
                </value>
                <value>
                    <fullName>Dead File/PT</fullName>
                </value>
                <value>
                    <fullName>CC Declined</fullName>
                </value>
                <value>
                    <fullName>Order Shipped</fullName>
                </value>
                <value>
                    <fullName>Genetic Test Pending</fullName>
                </value>
                <value>
                    <fullName>Order Pending</fullName>
                </value>
                <value>
                    <fullName>Kit Id Missing</fullName>
                </value>
                <value>
                    <fullName>Unsupported State</fullName>
                </value>
                <value>
                    <fullName>Lab Provider Missing</fullName>
                </value>
                <value>
                    <fullName>Too Many Lab Requests Attempts</fullName>
                </value>
                <value>
                    <fullName>Shipping Address Invalid</fullName>
                </value>
                <value>
                    <fullName>Patient No Show</fullName>
                </value>
                <value>
                    <fullName>Provider No Show</fullName>
                </value>
                <value>
                    <fullName>Provider Scheduling Conflict</fullName>
                </value>
                <value>
                    <fullName>Patient Request</fullName>
                </value>
                <value>
                    <fullName>Provider Terminated</fullName>
                </value>
                <value>
                    <fullName>License Mismatch</fullName>
                </value>
                <value>
                    <fullName>Checked In</fullName>
                </value>
                <value>
                    <fullName>In Room</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>In Session</fullName>
                </value>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Traffic_Signal__c</fullName>
        <description>A field used to coordinate sync and update of Opportunity ownership assignments.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A field used to coordinate sync and update of Opportunity ownership assignments.</inlineHelpText>
        <label>Opportunity Traffic Signal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Submission_Date_To_CellScience__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Submission date to Lab</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Opp_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Opp Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be used to know the first opportunity record for any subscription opportunity. 

The reason is that when a renewal happens, we want to know where that renewal came from.</description>
        <label>Origination Record</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Calendly_Link__c</fullName>
        <formula>Owner.Calendly__CalendlyLink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner_Calendly_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent/Guardian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Parent Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partial_Amount__c</fullName>
        <label>Partial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <label>Patient Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Billing_State_Filter__c</fullName>
        <formula>Account.Patient_Billing_State_Filter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Billing State - Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Date_Of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Driver_s_License__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Driver&apos;s License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                    <isActive>false</isActive>
                    <label>Deposit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Practitioner_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Practitioner_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Practitioner_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Script Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate Doctor Account Record Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Script Doctor)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practitioner_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Website__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Practitioner_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_In_Use__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Price Book In Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_List_Price__c</fullName>
        <label>Product List Price</label>
        <summarizedField>OpportunityLineItem.ListPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Total_Price__c</fullName>
        <label>Product Total Price</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Promotion_Amount__c</fullName>
        <formula>IF(Aesthetics_Promotion__c != NULL,Aesthetics_Promotion__r.Promotion_Amount__c ,
IF(Genetic_Testing_Promotion__c != NULL,Genetic_Testing_Promotion__r.Promotion_Amount__c ,
IF(Hormone_Evaluation_Promotion__c != NULL,  Hormone_Evaluation_Promotion__r.Promotion_Amount__c,
IF(Lab_Promotion__c != NULL,  Lab_Promotion__r.Promotion_Amount__c,
IF(Medication_Promotion__c != NULL, Medication_Promotion__r.Promotion_Amount__c,
IF(Medical_Consultation_Promotion__c != NULL,  Medical_Consultation_Promotion__r.Promotion_Amount__c , 
IF(Sexual_Wellness_Promotion__c != NULL, Sexual_Wellness_Promotion__r.Promotion_Amount__c, 0.00)

			
)

)

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotion_Applied__c</fullName>
        <formula>IF(Genetic_Testing_Promotion__c != NULL ||Aesthetics_Promotion__c != NULL ||  Sexual_Wellness_Promotion__c != NULL ||  Lab_Promotion__c != Null || Hormone_Evaluation_Promotion__c != NULL ||  Medical_Consultation_Promotion__c != NULL || Medication_Promotion__c != NULL, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Status__c</fullName>
        <formula>IF(Aesthetics_Promotion__c != NULL,TEXT(Aesthetics_Promotion__r.Promotion_Status__c) ,
IF(Hormone_Evaluation_Promotion__c != NULL,TEXT(Hormone_Evaluation_Promotion__r.Promotion_Status__c),
IF(Lab_Promotion__c != NULL, TEXT(Lab_Promotion__r.Promotion_Status__c),
IF(Medication_Promotion__c != NULL, TEXT(Medication_Promotion__r.Promotion_Status__c),
IF(Genetic_Testing_Promotion__c != NULL,TEXT(Genetic_Testing_Promotion__r.Promotion_Status__c),
IF(Medical_Consultation_Promotion__c != NULL, TEXT(Medical_Consultation_Promotion__r.Promotion_Status__c ),
IF(Sexual_Wellness_Promotion__c != NULL, TEXT(Sexual_Wellness_Promotion__r.Promotion_Status__c), NULL)

)

)

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_Cart_Link__c</fullName>
        <description>Used to store the pre-defined Shopify order for Wellness Support to come in and place the order with the client on the phone.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Protocol Cart Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Recurrence</fullName>
                </value>
                <value>
                    <fullName>Reship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QB_Discount_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Medical_Consultation_Promotion__c)), LEFT(Medical_Consultation_Promotion__r.Name, 31),
    IF(NOT(ISBLANK(Medication_Promotion__c)), LEFT(Medication_Promotion__r.Name, 31),
        IF(NOT(ISBLANK(Sexual_Wellness_Promotion__c)), LEFT(Sexual_Wellness_Promotion__r.Name, 31),
	    IF(NOT(ISBLANK(Lab_Promotion__c)), LEFT(Lab_Promotion__r.Name, 31),
		    IF(NOT(ISBLANK(Aesthetics_Promotion__c)), LEFT(Aesthetics_Promotion__r.Name, 31),
		    	    IF(NOT(ISBLANK(Hormone_Evaluation_Promotion__c)), LEFT(Hormone_Evaluation_Promotion__r.Name, 31), NULL))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB Discount Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Failure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Generated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Receipt Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Receipt_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipt_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Receipt Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Receipt_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will denote if this opportunity is a renewal subscription or not</description>
        <label>Recurrence Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_By_Location__c</fullName>
        <formula>TEXT( Referred_By__r.Branch_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referred By Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Role__c</fullName>
        <formula>Referred_By__r.Employee__r.UserRole.Name</formula>
        <label>Referred By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Type__c</fullName>
        <formula>TEXT(  Referred_By__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referred By Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Based on the Affiliate Code field on the opportunity this field will be filled in by whom ever is a match to that referral code.</description>
        <label>Referred By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Referral_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referred By)</relationshipLabel>
        <relationshipName>Influenced_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason_s__c</fullName>
        <label>Rejected Reason(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AVS Mismatch</fullName>
                </value>
                <value>
                    <fullName>Credit Card Declined</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product</fullName>
                </value>
                <value>
                    <fullName>Medical Approval</fullName>
                </value>
                <value>
                    <fullName>Missing Demographics</fullName>
                </value>
                <value>
                    <fullName>State Restriction</fullName>
                </value>
                <value>
                    <fullName>Incorrect Order Duration</fullName>
                </value>
                <value>
                    <fullName>Incorrect Payment Method</fullName>
                </value>
                <value>
                    <fullName>Labs Expired</fullName>
                </value>
                <value>
                    <fullName>Incorrect Medication Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Chargent_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>To establish reporting relationship</description>
        <label>Related Chargent Order</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To create relationship for Team requirements.</description>
        <label>Related Transaction</label>
        <referenceTo>ChargentOrders__Transaction__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Shipping__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Requires Shipping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Results_Failure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Results Failure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Results_sent_to_Patient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Results sent to Patient</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lab Review Genetic</fullName>
                </value>
                <value>
                    <fullName>Lab Review Blood</fullName>
                </value>
                <value>
                    <fullName>Wellness Assessment</fullName>
                </value>
                <value>
                    <fullName>Peptide Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Tag__c</fullName>
        <inlineHelpText>Risk Tag from Shopify</inlineHelpText>
        <label>Risk Tag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SameAsBillingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same As Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SameAsShippingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same As Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Info_As_On_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Info As On Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Info_As_On_Consultation_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Info As On Consultation Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Info_As_On_Lab_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Info As On Lab Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Info_As_On_Main_Practitioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Info As On Main Practitioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Info_As_On_Script_Practitioner_Acc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Info As On Script Practitioner Acc.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Shipping_Company__c</fullName>
        <label>2nd Shipping Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fedex</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Shipping_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>2nd Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Tracking_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>2nd Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>